review/deployment-v7.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-v7
  namespace: ecommerce
spec:
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
        version: v7
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: review
        image: hiprabhat/ecommerce-review:v7
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
