review/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review
  namespace: ecommerce
  labels:
    app: review
spec:
  selector:
    app: review
  ports:
  - port: 80
    targetPort: 8081
    name: http-review
