review/istio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review
  namespace: ecommerce
spec:
  hosts:
    - review
  http:
  - route:
    - destination:
        host: review
        subset: v6
      weight: 50
    - destination:
        host: review
        subset: v7
      weight: 50
